--- a/package.json
+++ b/package.json
@@ -10,5 +10,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^3.0.0",
+    "grunt": "^0.4.5",
+    "grunt-jsdoc": "^0.6.7",
+    "gulp": "^3.9.0",
+    "gulp-jshint": "^1.11.0",
+    "jshint-stylish": "^2.0.1",
+    "mocha": "^2.2.5",
+    "supertest": "^1.0.1"
+  }
 }
