--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --ui bdd --reporter spec --require test/helpers/setup --recursive --watch test/app",
+    "start": "set NODE_ENV=local&& node index.js"
   },
   "author": "",
   "license": "ISC",
