--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "test": "./node_modules/.bin/mocha --ui bdd --reporter spec --require test/helpers/setup --recursive --watch test/app",
     "start": "set NODE_ENV=local&& node index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/juanpiwi/End-to-End.git"
+  },
+  "bugs": {
+    "url": "https://github.com/juanpiwi/End-to-End/issues"
+  },
+  "homepage": "https://github.com/juanpiwi/End-to-End#README",
   "author": "",
   "license": "ISC",
   "devDependencies": {
