--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,9 @@
     "public/lib",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "1.3.16",
+    "angular-route": "~1.4.1"
+  }
 }
