--- a/package.json
+++ b/package.json
@@ -42,5 +42,11 @@
     "jshint-stylish": "^2.0.1",
     "mocha": "^2.2.5",
     "supertest": "^1.0.1"
+  },
+  "dependencies": {
+    "body-parser": "^1.13.1",
+    "express": "^4.13.0",
+    "favicon": "0.0.2",
+    "serve-favicon": "^2.3.0"
   }
 }
