--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "body-parser": "^1.13.1",
     "express": "^4.13.0",
     "favicon": "0.0.2",
+    "mongoose": "^4.0.6",
     "serve-favicon": "^2.3.0"
   }
 }
