--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp": "^3.9.0",
     "gulp-bundle-assets": "^2.21.0",
     "gulp-jshint": "^1.11.0",
+    "gulp-livereload": "^3.8.0",
     "jshint-stylish": "^2.0.1",
     "mocha": "^2.2.5",
     "supertest": "^1.0.1"
