module method override

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "body-parser": "^1.13.1",
     "express": "^4.13.0",
     "favicon": "0.0.2",
+    "method-override": "^2.3.5",
     "mongoose": "^4.0.6",
     "serve-favicon": "^2.3.0"
   }
