--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "body-parser": "^1.13.1",
     "express": "^4.13.0",
     "favicon": "0.0.2",
+    "jwt-simple": "^0.3.1",
     "method-override": "^2.3.5",
+    "moment": "^2.10.6",
     "mongoose": "^4.0.6",
     "serve-favicon": "^2.3.0"
   }
