--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "angular": "1.3.16",
-    "angular-route": "~1.4.1"
+    "angular-route": "~1.4.1",
+    "satellizer": "~0.12.4"
   }
 }
