karma - upgrade & configuration

--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
   "devDependencies": {
     "chai": "^3.0.0",
     "grunt": "^0.4.5",
-    "grunt-jsdoc": "^0.6.7",
+    "grunt-jsdoc": "^1.0.0",
+    "grunt-karma": "^0.12.1",
     "gulp": "^3.9.0",
     "gulp-bundle-assets": "^2.21.0",
     "gulp-jshint": "^1.11.0",
     "gulp-livereload": "^3.8.0",
     "jshint-stylish": "^2.0.1",
+    "karma": "^0.13.10",
     "mocha": "^2.2.5",
     "supertest": "^1.0.1"
   },
