--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jshint-stylish": "^2.1.0",
     "karma": "^0.13.15",
     "mocha": "^2.3.4",
+    "standard": "^5.4.1",
     "supertest": "^1.1.0"
   },
   "dependencies": {
