--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha --ui bdd --reporter spec --require test/helpers/setup --recursive --watch test/app",
+    "test": "tape test/*-test.js",
     "start": "set NODE_ENV=local&& node index.js"
   },
   "repository": {
@@ -45,7 +45,9 @@
     "karma": "^0.13.15",
     "mocha": "^2.3.4",
     "standard": "^5.4.1",
-    "supertest": "^1.1.0"
+    "supertest": "^1.1.0",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.4.0"
   },
   "dependencies": {
     "body-parser": "^1.14.1",
